--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,25 @@
     <groupId>ru.train</groupId>
     <artifactId>ru.train</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+<dependencies>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>4.2.5.RELEASE</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>4.2.5.RELEASE</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>4.2.5.RELEASE</version>
+    </dependency>
+
+</dependencies>
     <build>
         <plugins>
             <plugin>
